<!--
  ~ Copyright 2017 Peng Wan <phylame@163.com>
  ~
  ~ This file is part of Jem.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Imabw</string>

    <string name="button_ok">确定</string>

    <string name="menu_item_exit">退出</string>
    <string name="menu_item_settings">设置</string>
    <string name="menu_item_open">打开</string>
    <string name="menu_item_save">保存</string>

    <string name="book_action_rename">重命名</string>
    <string name="book_action_attributes">属性</string>
    <string name="book_action_insert">插入</string>

    <string name="book_open_progress">读取文件…</string>
    <string name="open_book_failed">打开文件失败</string>
    <string name="book_detail_pattern">%1$s | %2$s</string>

    <string name="chapter_text_hint">输入正文内容</string>
    <string name="book_default_book_name">未命名</string>
    <string name="book_action_new">新建</string>

    <plurals name="book_section_detail">
        <item quantity="other">共 %1$d 章</item>
    </plurals>
    <string name="title_activity_text">正文</string>
    <string name="book_action_add">新增</string>
    <string name="book_action_search">搜索</string>
    <string name="book_search_chapter">输入章节名</string>
    <string name="title_activity_properties">属性</string>
    <string name="action_readonly">只读</string>
    <string name="open_book_title">打开文件</string>
    <string name="err_no_such_file">文件不存在：%1$s</string>
    <string name="err_unsupported_format">文件格式不支持：%1$s</string>
    <string name="comm_book_untitled">未命名</string>
    <string name="save_book_asking">文件已修改，保存？</string>
    <string name="new_book_title">新建文件</string>
    <string name="button_cancel">取消</string>
    <string name="open_book_progress">读取文件……</string>
    <string name="exit_app_title">退出 Imabw</string>
    <string name="menu_item_more">更多</string>
    <string name="menu_item_help">帮助</string>
    <string name="menu_item_about">关于</string>
    <string name="menu_item_convert">转换</string>
    <string name="attributes_action_clear">清空</string>
    <string name="save_book_success">文件已保存到：%1$s</string>
    <string name="button_discard">放弃</string>
    <string name="add_chapter_title">新建章节</string>
    <string name="add_chapter_hint">输入章节名</string>
    <string name="rename_chapter_title">重命名章节</string>
    <string name="comm_chapter_untitled">未命名</string>
    <string name="insert_chapter_title">插入章节</string>
    <string name="add_subchapter_title">新建子章节</string>
    <string name="err_bad_file">文件错误：%1$s</string>
    <string name="err_unknown_cause">未知错误</string>
    <string name="exit_app_double">再按一次退出程序</string>
    <string name="err_internal_cause">程序内部错误</string>
    <string name="edit_attribute_tip">编辑“%1$s”</string>
    <string name="comm_true">是</string>
    <string name="comm_false">否</string>
    <string name="chapter_words_info">字数：%1$s</string>
    <string name="chapter_intro_info">简介：%1$s</string>
    <string name="add_attribute_title">添加属性</string>

    <string name="title_activity_image">Image</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
