<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Peng Wan <phylame@163.com>
  ~
  ~ This file is part of Jem.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_search"
            android:actionViewClass="android.support.v7.widget.SearchView"
            android:icon="@drawable/ic_search"
            android:title="@string/book_action_search"
            app:showAsAction="ifRoom|collapseActionView"/>
    <item
            android:id="@+id/action_attributes"
            android:icon="@drawable/ic_properties"
            android:title="@string/book_action_attributes"
            app:showAsAction="ifRoom|withText"/>
    <item
            android:id="@+id/action_new"
            android:title="@string/book_action_new"/>
    <item
            android:id="@+id/action_open"
            android:title="@string/menu_item_open"/>
    <item
            android:id="@+id/action_save"
            android:title="@string/menu_item_save"/>
    <item android:title="@string/menu_item_more">
        <menu>

            <item
                    android:id="@+id/action_convert"
                    android:title="@string/menu_item_convert"/>
            <item
                    android:id="@+id/action_help"
                    android:title="@string/menu_item_help"/>
            <item
                    android:id="@+id/action_about"
                    android:title="@string/menu_item_about"/>
        </menu>
    </item>
    <item
            android:id="@+id/action_settings"
            android:title="@string/menu_item_settings"/>
    <item
            android:id="@+id/action_exit"
            android:title="@string/menu_item_exit"/>

</menu>
