<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_detail"
        android:title="@string/book_action_properties"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_edit" />
    <item android:title="@string/book_action_new"
        android:id="@+id/action_new" />
    <item
        android:id="@+id/action_open"
        android:title="@string/menu_item_open" />
    <item
        android:id="@+id/action_save"
        android:title="@string/menu_item_save" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_item_settings" />
    <item
        android:id="@+id/action_exit"
        android:title="@string/menu_item_exit" />

</menu>